--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "npm-stats",
   "version": "1.0.0",
-  "description": "UI that displays top node modules stats, and npm web scraper",
+  "description": "npm web scraper",
   "main": "app.js",
   "scripts": {},
   "engines": {
@@ -11,14 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.4.7",
-    "body-parser": "^1.17.1",
     "cheerio": "^0.22.0",
-    "compression": "^1.6.2",
-    "express": "^4.14.1",
+    "jsonfile": "^2.4.0",
     "lodash": "^4.17.4",
-    "morgan": "^1.8.1",
-    "nunjucks": "^3.0.0",
     "request": "^2.81.0"
-  },
-  "devDependencies": {}
+  }
 }
